manifests-openshift/deploy-acmeair-authservice-java.yaml
###### Main Service ######
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-auth-deployment
  template:
    metadata:
      labels:
        name: acmeair-auth-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-authservice-java
        image: docker.io/emanelsabban/acmeair-microsvc:acmeair-authservice2-java
        #image: emanelsabban/acmeair-microsvc:acmeair-authservice-java
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 200Mi
            cpu: 1
          requests:
            memory: 200Mi
            cpu: 400m
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 15
          timeoutSeconds: 50
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          timeoutSeconds: 50
          periodSeconds: 15
      nodeSelector:
        chosen: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-auth-service
spec:
  ports:
    - name: 9080-tcp
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    name: acmeair-auth-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-secure-auth-service
spec:
  ports:
    - name: 9443-tcp
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    name: acmeair-auth-deployment
